# alice-rs

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml
.github/workflows/: rust.yml
alice/: Cargo.toml  README.md
alice-download/: Cargo.toml  README.md
alice-download/src/: main.rs
alice-open-data/: Cargo.toml  README.md
alice-open-data/src/: bin.rs  eospublichttpcernch.crt  lib.rs  main.rs  tests.rs
alice-open-data/tests/: wasm.rs
alice-sys/: Cargo.toml  README.md  build.rs
alice-sys/src/: dataset.rs  lib.rs  primary_vertex.rs
alice-sys/src/ffi/: ffi.rs  lesd-c.cxx  lesd-c.h  mod.rs
alice-sys/src/ffi/cpp_src/: ESD.cxx  ESD.h  ESDmerged.h
alice-sys/src/ffi/cpp_src/ESD/: G__ESD.cxx  G__ESD.h  Makefile
alice-sys/src/ffi/cpp_src/STEERBase/: ARVersion.h  G__STEERBase.cxx  G__STEERBase.h  Makefile
alice-sys/tests/: test.rs
alice/src/: dataset.rs  esd.rs  event.rs  event_traits.rs  lib.rs  primary_vertex.rs  track.rs  track_traits.rs  trigger.rs  trigger_mask.rs  vzero.rs
alice/src/analysis/: array_base_ext.rs  cuts.rs  mod.rs  traits.rs
alice_depricated/: Cargo.toml
alice_depricated/src/: event.rs  event_traits.rs  primary_vertex.rs  track.rs  track_traits.rs  vzero.rs
alice_depricated/src/analysis/: utils.rs
analyses/: Cargo.toml
analyses/src/: bin.rs  lib.rs  main.rs  selections.rs
analyses/src/analyses/: array_base_ext.rs  event_distributions.rs  merge.rs  mod.rs  pair_distributions.rs  process_event.rs  pt_multiplicity.rs  single_particle_distributions.rs  utils.rs  visualize.rs
examples/convert_to_json/: Cargo.toml  README.md  analyze.py
examples/convert_to_json/src/: main.rs
examples/convert_to_msgpack/: Cargo.toml  README.md  analyze.py
examples/convert_to_msgpack/src/: main.rs
examples/efficiency_map/: Cargo.toml
examples/efficiency_map/src/: analysis.rs  main.rs
examples/invariant_mass/: Cargo.toml
examples/invariant_mass/src/: main.rs
examples/simple-analysis/: Cargo.toml  README.md
examples/simple-analysis/src/: distribution.rs  main.rs
histogram/: Cargo.toml  README.md
histogram/src/: lib.rs
malice/: Cargo.toml  README.md
malice/benches/: rust_vs_root.rs
malice/src/: dataset_cpp.rs  dataset_rust.rs  esd.rs  event.rs  lib.rs  merge.rs  primary_vertex.rs  track.rs  utils.rs
root-io/: Cargo.toml  README.md
root-io/benches/: iter_branch.rs
root-io/src/: lib.rs  test_utils.rs  utils.rs
root-io/src/code_gen/: mod.rs  rust.rs  utils.rs
root-io/src/core/: compression.rs  data_source.rs  file.rs  file_item.rs  mod.rs  parsers.rs  tkey.rs  tstreamer.rs  tstreamerinfo.rs  typeid.rs  types.rs
root-io/src/test_data/: README.md
root-io/src/tests/: basic_io.rs  high_level_io.rs  mod.rs  read_esd.rs  read_simple.rs
root-io/src/tree_reader/: branch.rs  clustered_bucket_iter.rs  column_fixed_into_iter.rs  column_var_into_iter.rs  container.rs  leafs.rs  mod.rs  tree.rs
root-io/tests/: high_level_io.rs  read_esd.rs  read_simple.rs
root-ls/: Cargo.toml  README.md
root-ls/src/: main.rs
simple-analysis/: Cargo.toml  README.md
simple-analysis/src/: distribution.rs  main.rs
src/: analyses.rs  main.rs  utils.rs
src/analyses/: event_distributions.rs  mod.rs  pair_distributions.rs  pt_multiplicity.rs  single_particle_distributions.rs  utils.rs
track-dca-sys/: Cargo.toml  build.rs
track-dca-sys/src/: AliExternalTrackParam.cxx  AliExternalTrackParam.hpp  lib.rs
