[package]
name = "alice-analysis"
version = "0.1.0"
authors = ["cbourjau <christian.bourjau@cern.ch>"]

[dependencies]
alice = {path = "alice" }
alice-sys = {path = "alice-sys" }
histogram = {path = "histogram" }
gnuplot = "0.0.22"
glob = "0.2.11"
ndarray = "0.9.1"
rand = "0.3.16"
indicatif = "0.6.0"
rustfft = "2.0.0"