[workspace]
members = [
 "alice-download",
 "alice-open-data",
 "histogram",
 "root-io",
 "root-ls",
 "malice",
 "examples/simple-analysis",
 "examples/convert_to_msgpack",
]

[workspace.dependencies]
alice-open-data = { version="0.5", path="alice-open-data" }
nom = "^7"
reqwest = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
failure = "0.1"
futures = "0.3"
root-io = { version="0.3.0", path="root-io" }
