[package]
name = "alice-download"
version = "0.2.0"
authors = ["cbourjau <c.bourjau@posteo.de>"]
description = "CLI tool to download a given amount of the publicly released ALICE open data"
repository = "https://github.com/cbourjau/alice-rs"
readme = "README.md"
keywords = ["cern", "alice", "lhc", "physics", "data"]
categories = ["science"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
indicatif = "^0.6.0"
clap = "^2"
alice-open-data = "0.3"
failure = "0.1.5"
tokio = "0.2.9"
