[package]
name = "alice-download"
version = "0.4.0"
authors = ["cbourjau <c.bourjau@posteo.de>"]
description = "CLI tool to download a given amount of the publicly released ALICE open data"
repository = "https://github.com/cbourjau/alice-rs"
readme = "README.md"
keywords = ["cern", "alice", "lhc", "physics", "data"]
categories = ["science"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
indicatif = "0.16"
clap = "^2"
alice-open-data = { workspace=true }
failure = { workspace=true }
tokio = { workspace=true }
