[package]
name = "alice-open-data"
version = "0.4.0"
authors = ["cbourjau <c.bourjau@posteo.de>"]
description = "Tools to download and manage the publicly released ALICE open data"
repository = "https://github.com/cbourjau/alice-rs"
readme = "README.md"
keywords = ["cern", "alice", "lhc", "physics", "data"]
categories = ["science"]
license = "MPL-2.0"
edition="2018"

[dependencies]
glob = "^0.2.11"
failure = "0.1.1"
reqwest = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "0.2", features = ["macros", "test-util"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
futures = "0.3"
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.10"
web-sys = {"version" = "0.3.37", "features" = [ 'console' ]}

