[package]
name = "alice-open-data"
version = "0.5.1"
authors = ["cbourjau <c.bourjau@posteo.de>"]
description = "Tools to download and manage the publicly released ALICE open data"
repository = "https://github.com/cbourjau/alice-rs"
readme = "README.md"
keywords = ["cern", "alice", "lhc", "physics", "data"]
categories = ["science"]
license = "MPL-2.0"
edition="2018"

[dependencies]
glob = "0.3"
failure = "0.1"
reqwest = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
futures = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = {"version" = "0.3", "features" = [ 'console' ]}

