[package]
name = "alice"
version = "0.1.0"
authors = ["cbourjau <christian.bourjau@cern.ch>"]

[dependencies]
libc = "*"
bitflags = "^0.9.1"
log = "^0.3.8"
alice-sys = {path = "../alice-sys"}
alice-open-data = {path = "../alice-open-data"}
chan = "^0.1.19"
rayon = "^0.8.2"
lazy_static = "0.2"
indicatif = "^0.8"