[package]
name = "alice"
version = "0.1.0"
authors = ["cbourjau <christian.bourjau@cern.ch>"]

[dependencies]
libc = "*"
bitflags = "^0.9.1"
log = "^0.3.8"
alice-sys = {path = "../alice-sys"}
alice-open-data = {path = "../alice-open-data"}
chan = "^0.1.19"
rayon = "^0.8.2"
lazy_static = "0.2"
indicatif = "^0.8"
ndarray = {version="^0.10.12", features = ["serde-1"]}
rustfft = "^2.0.0"
num-traits = "^0.1.40"
rand = "^0.3.16"
serde = "^1.0"
serde_derive = "^1.0"
bincode = "^0.9"