[package]
name = "analyses"
version = "0.1.0"
authors = ["cbourjau <christian.bourjau@cern.ch>"]

[dependencies]
alice = {path = "../alice" }
alice-sys = {path = "../alice-sys" }
histogram = {path = "../histogram" }
gnuplot = "^0.0.22"
glob = "^0.2.11"
ndarray = {version="^0.10.12", features = ["serde-1"]}
indicatif = "^0.6.0"
rustfft = "^2.0.0"
num-traits = "^0.1.40"
alice-open-data = {path = "../alice-open-data"}
rayon = "^0.8.2"

[profile.release]
debug = false

[lib]
name = "analyses"
path = "src/lib.rs"

[[bin]]
name = "pairs"
path = "src/bin.rs"