[package]
name = "histogram"
version = "0.1.0"
authors = ["cbourjau <c.bourjau@posteo.de>"]
edition = "2018"

[dependencies]
bincode = "1.0.0"
ndarray = {version="^0.13", features = ["serde-1"]}
thiserror = "1.0.19"
wasm-bindgen = "0.2.62"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.40"
