[package]
name = "malice"
version = "0.3.0"
authors = ["cbourjau <c.bourjau@posteo.de>"]
exclude = ["benches/*"]
description = "A small framwork providing sensible defaults to analyse ALICE's open data"
repository = "https://github.com/cbourjau/alice-rs/malice"
readme = "README.md"
keywords = ["root", "cern", "alice", "lhc", "physics"]
categories = ["science", "data-structures"]
license = "MPL-2.0"
edition = "2018"

[features]
default = []
cpp = ["alice-sys"]

[dependencies]
bitflags = "1.0.1"
failure = "0.1.5"
futures = "0.3"
nom = "^5"
root-io = { version="0.3.0", path="../root-io" }
# Optional dependencies
alice-sys = { version="0.1.1", optional = true }
itertools = "0.8.1"
wasm-bindgen = "0.2.60"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Tokio is used in the entry helper function to iterate over files
tokio = { version = "0.2", features = ["macros"] }

[dev-dependencies]
alice-open-data = { version="0.5", path="../alice-open-data" }
criterion = "0.3"

[[bench]]
name = "rust_vs_root"
path = "benches/rust_vs_root.rs"
harness = false
