[package]
name = "root-io"
version = "0.4.0"
authors = ["cbourjau <c.bourjau@posteo.de>"]
exclude = ["*test_data/", "*.root"]
description = "Reading of `.root` binary files which are commonly used in particle physics"
repository = "https://github.com/cbourjau/alice-rs"
readme = "README.md"
keywords = ["root", "cern", "alice", "lhc", "physics"]
categories = ["parser-implementations", "science", "data-structures"]
license = "MPL-2.0"
edition = "2018"


[dependencies]
alice-open-data = { version = "0.5", path = "../alice-open-data/" }
bitflags = "1.3"
flate2 = "^1"
futures = "0.3"
lzma-rs = "0.2"
quote = "0.3"
reqwest = "0.11"
uuid = "0.8.2"
lz4-compress = "0.1.1"
nom = "7"
nom-supreme = "0.6"
nom_locate = "4.0.0"
thiserror = "1"
ouroboros = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.3"
tokio = { version = "1.15", features = ["macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { "version" = "0.3", "features" = ['console'] }

# Run with cargo bench --bench iter_branch -- --baseline pathbuf-in-container --color never
[[bench]]
name = "iter_branch"
harness = false

