[package]
name = "root-ls"
version = "0.1.4"
authors = ["cbourjau <christian.bourjau@cern.ch>"]
description = "CLI tool to inspect the content and layout of `.root` files"
repository = "https://github.com/cbourjau/alice-rs"
readme = "README.md"
keywords = ["root", "cern", "alice", "lhc", "physics"]
categories = ["science", "command-line-utilities"]
license = "MPL-2.0"
edition = "2018"


[dependencies]
clap = "^2"
failure = "0.1.5"
root-io = { version="0.2.1", path="../root-io" }
rustfmt = "0.9.0"
tokio = { version = "0.2", features = ["full"] }
