[package]
name = "root-ls"
version = "0.2.1"
authors = ["cbourjau <christian.bourjau@cern.ch>"]
description = "CLI tool to inspect the content and layout of `.root` files"
repository = "https://github.com/cbourjau/alice-rs"
readme = "README.md"
keywords = ["root", "cern", "alice", "lhc", "physics"]
categories = ["science", "command-line-utilities"]
license = "MPL-2.0"
edition = "2018"


[dependencies]
clap = "2"
failure = "0.1"
root-io = { version="0.4", path="../root-io" }
prettyplease = "0.1"
syn = "1"
tokio = { version = "1", features = ["full"] }
