[package]
name = "root-ls"
version = "0.2.0"
authors = ["cbourjau <christian.bourjau@cern.ch>"]
description = "CLI tool to inspect the content and layout of `.root` files"
repository = "https://github.com/cbourjau/alice-rs"
readme = "README.md"
keywords = ["root", "cern", "alice", "lhc", "physics"]
categories = ["science", "command-line-utilities"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
clap = "2"
failure = { workspace=true }
root-io = { workspace=true }
prettyplease = "0.1"
syn = "1"
tokio = { workspace=true }
