[package]
name = "track-param-sys"
version = "0.1.0"
authors = ["cbourjau <cbourjau@posteo.de>"]
edition = "2018"

[build-dependencies]
bindgen = "0.53.2"
cc = "1.0"

[dev-dependencies]
alice-open-data = "0.4.0"
failure = "0.1.8"
futures = "0.3"
nom = "5.1.1"
reqwest = "0.10.4"
root-io = "0.2.1"
tokio = { version = "0.2", features = ["macros", "test-util"] }
