[package]
name = "track-dca-sys"
version = "0.1.0"
authors = ["cbourjau <cbourjau@posteo.de>"]
edition = "2018"

[build-dependencies]
bindgen = "0.53.2"
cc = "1.0"

[dev-dependencies]
alice-open-data = "0.4.0"
failure = "0.1.8"
futures = "0.3"
nom = "5.1.1"
reqwest = "0.10.6"
root-io = { "path" = "../root-io" }
tokio = { version = "0.2", features = ["macros", "test-util"] }

[dependencies]
assert_approx_eq = "1.1.0"
