[package]
name = "convert_to_msgpack"
version = "0.1.0"
authors = ["cbourjau <c.bourjau@posteo.de>"]
edition = "2021"

[dependencies]
alice-open-data = { workspace=true }
malice = { version="0.3.0", path="../../malice" }
rmp-serde = "0.13.7"
root-io = { workspace=true }
serde = "1.0"
serde_derive = "1.0"
