[package]
name = "simple-analysis"
version = "0.1.0"
authors = ["cbourjau <c.bourjau@posteo.de>"]
workspace = "../../"
edition = "2018"

[dependencies]
alice-open-data = "0.3"
failure = "0.1.1"
gnuplot = "^0.0.22"
histogram = {path = "../../histogram" }
malice = { version = "0.2.1", path = "../../malice" }
