[package]
name = "simple-analysis"
version = "0.1.0"
authors = ["cbourjau <c.bourjau@posteo.de>"]
workspace = "../../"
edition = "2021"

[dependencies]
alice-open-data = { version="0.5", path="../../alice-open-data" }
failure = "0.1.1"
gnuplot = "^0.0.22"
histogram = {path = "../../histogram" }
malice = { version = "0.3.0", path = "../../malice" }
